# SwarmBotPrivate

./: Cargo.toml  LICENSE
.cargo/: config.toml
interfaces/src/: types.rs
src/: main.rs
src/bootstrap/: mojang.rs  opts.rs
src/client/: commands.rs
src/client/pathfind/: context.rs  moves.rs
src/client/physics/: mod.rs
src/client/tasks/: compound.rs
src/storage/: chunk.rs
swarmbot-lib/: Cargo.toml
swarmbot-lib/src/: lib.rs
swarmbot-lib/src/bootstrap/: dns.rs  opts.rs
swarmbot-lib/src/client/: bot.rs
swarmbot-lib/src/client/follow/: mod.rs
swarmbot-lib/src/client/pathfind/: context.rs  moves.rs  traits.rs
swarmbot-lib/src/client/pathfind/implementations/: mod.rs  no_vehicle.rs
swarmbot-lib/src/client/pathfind/incremental/: mod.rs
swarmbot-lib/src/client/physics/: mod.rs  speed.rs
swarmbot-lib/src/client/state/local/: inventory.rs
swarmbot-lib/src/client/tasks/: attack_entity.rs  bridge.rs  center.rs  mine_region.rs  navigate.rs
swarmbot-lib/src/client/tasks/navigate/: block_discrete.rs  gametick_discete.rs
swarmbot-lib/src/protocol/: mod.rs
swarmbot-lib/src/protocol/io/: reader.rs
swarmbot-lib/src/protocol/v340/: mod.rs
swarmbot-runner/: Cargo.toml
swarmbot-runner/src/: main.rs
swarmbot-test/: Cargo.toml
swarmbot-test/src/: main.rs  server.rs
test-data/server/: eula.txt  ops.json  server.properties
test-data/server/plugins/bStats/: config.yml
tests/: test_schem.rs
