#[package]
#name = "swarm-bot"
#version = "0.3.4"
#edition = "2021"
#description = "A autonomous bot launcher for Minecraft"
#license = "Business Source License"
#readme = "README.md"
#authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
#repository = "https://github.com/andrewgazelka/SwarmBot"
#homepage = "https://github.com/andrewgazelka/SwarmBot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["packets", "interfaces", "swarmbot-cli", "swarmbot-lib", "swarmbot-runner", "swarmbot-test"]

[workspace.dependencies]
swarm-bot-packets = { path = "packets" }
interfaces = { package = "swarmbot-interfaces", path = "interfaces" }
swarmbot-cli = { path = "swarmbot-cli" }
swarmbot-runner = { path = "swarmbot-runner" }
swarmbot-lib = { path = "swarmbot-lib" }




[profile.dev]
#split-debuginfo = "unpacked"
#opt-level = 1


[profile.release]
lto = "fat"
codegen-units = 1
