[package]
name = "swarmbot-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
tempdir = "0.3.7"
anyhow = "1.0.68"
swarmbot-lib.workspace = true
tokio = { version = "1.24.2" , features = ["full"]}